--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,12 +14,12 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "ent-sinuscenter.com",
-    "user": "entsinus",
-    "password": "8241Rochester",
+    "host": "inlandempiresinus.com",
+    "user": "entsinus@milkoracle.org",
+    "password": "T5o?49wc}%!r",
     //"port": "22",
     
-    "remote_path": "/public_html/wp-content/themes/ENT-Sinus-Center-WP",
+    "remote_path": "/wp-content/themes/ENT-Sinus-Center-WP",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
