--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,12 +14,12 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "inlandempiresinus.com",
-    "user": "entsinus@milkoracle.org",
-    "password": "T5o?49wc}%!r",
+    "host": "ent-sinuscenter.com",
+    "user": "entsinus",
+    "password": "8241Rochester",
     //"port": "22",
     
-    "remote_path": "/wp-content/themes/ENT-Sinus-Center-WP",
+    "remote_path": "/public_html/wp-content/themes/ENT-Sinus-Center-WP",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
@@ -31,7 +31,7 @@
     //"extra_list_connections": 0,
 
     "connect_timeout": 30,
-    //"keepalive": 120,
+    "keepalive": 12,
     //"ftp_passive_mode": true,
     //"ftp_obey_passive_host": false,
     //"ssh_key_file": "~/.ssh/id_rsa",
